tests/ui/attributes/export-visibility-without-export-name.stderr
error: `#[export_visibility = ...]` will be ignored without `export_name`, `no_mangle`, or similar attribute
  --> $DIR/export-visibility-without-export-name.rs:4:1
   |
LL | #[export_visibility = "target_default"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

